--- a/.memos/手順書.md
+++ b/.memos/手順書.md
@@ -1,33 +1,103 @@
 # AI Agent Kit 開発手順書
 
-## 1. プロジェクトのセットアップ
+## 概要
 
-### 1.1 基本設定
+この手順書は、Next.js アプリケーションで活用できる「ai-agent-kit」の開発方法を説明します。このツールキットは、AI エージェントの一般的なワークフローパターン（プロンプトチェーン、ルーティング、並列化、オーケストレーター-ワーカー、評価者-最適化）を簡単に実装できるユーティリティを提供します。
+
+## 開発目標
+
+- ユーザーが自分で AI エージェントを構築できるよう**ワークフローパターンの実装をサポート**する
+- Vercel AI SDK との連携を前提に、**シンプルで使いやすい API**を提供する
+- TypeScript による**型安全**な設計で、開発者体験を向上させる
+- Next.js との**シームレスな統合**を可能にする
+
+## 1. プロジェクトセットアップ
+
+### 基本設定
 
 ```bash
 # プロジェクトディレクトリの作成
 mkdir ai-agent-kit
 cd ai-agent-kit
 
-# パッケージマネージャの初期化
+# pnpmの初期化
 pnpm init
 
-# TypeScript設定
-pnpm add -D typescript @types/node
-pnpm tsc --init
+# TypeScriptと開発に必要なパッケージのインストール
+pnpm add -D typescript @types/node tsup eslint prettier
+pnpm add -D @changesets/cli
+
+# 依存パッケージのインストール
+pnpm add ai @ai-sdk/react @ai-sdk/openai zod
 ```
 
-### 1.2 必要なパッケージのインストール
+### tsconfig.json の設定
 
-```bash
-# 主要な依存関係
-pnpm add ai zod
+```json
+{
+  "compilerOptions": {
+    "target": "es2020",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "declaration": true,
+    "outDir": "dist"
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "examples"]
+}
+```
 
-# 開発用の依存関係
-pnpm add -D typescript @types/node @types/react @types/react-dom tsup vitest
+### package.json の設定
 
-# オプショナル依存関係（peerDependencies）
-pnpm add -D @ai-sdk/react @ai-sdk/openai
+```json
+{
+  "name": "ai-agent-kit",
+  "version": "0.1.0",
+  "description": "AIエージェントのワークフローパターンを簡単に実装するためのツールキット",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "lint": "eslint src --ext .ts,.tsx",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "release": "pnpm build && changeset publish"
+  },
+  "files": ["dist"],
+  "keywords": ["ai", "agent", "llm", "nextjs", "react"],
+  "author": "Your Name",
+  "license": "MIT",
+  "peerDependencies": {
+    "ai": "^2.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  }
+}
+```
+
+### tsup.config.ts の設定
+
+```ts
+import { defineConfig } from "tsup";
+
+export default defineConfig({
+  entry: ["src/index.ts"],
+  format: ["cjs", "esm"],
+  dts: true,
+  splitting: false,
+  sourcemap: true,
+  clean: true,
+});
 ```
 
 ## 2. プロジェクト構造
@@ -35,685 +105,848 @@ pnpm add -D @ai-sdk/react @ai-sdk/openai
 ```
 ai-agent-kit/
 ├── src/
+│   ├── patterns/
+│   │   ├── prompt-chain.ts     # プロンプトチェーンパターン
+│   │   ├── routing.ts          # ルーティングパターン
+│   │   ├── parallelization.ts  # 並列化パターン
+│   │   ├── orchestrator.ts     # オーケストレーター-ワーカーパターン
+│   │   ├── evaluator.ts        # 評価者-最適化パターン
+│   │   └── index.ts            # パターンのエクスポート
 │   ├── core/
-│   │   ├── types.ts          # 型定義
-│   │   ├── constants.ts      # 定数
-│   │   ├── errors.ts         # エラー定義
-│   │   └── models.ts         # モデルラッパー
-│   ├── agents/
-│   │   ├── base.ts          # 基本エージェントクラス
-│   │   ├── workflow.ts      # ワークフローエージェント
-│   │   └── autonomous.ts    # 自律エージェント
-│   ├── tools/
-│   │   ├── base.ts          # 基本ツールクラス
-│   │   └── common/          # 共通ツール
-│   ├── memory/
-│   │   ├── base.ts          # 基本メモリクラス
-│   │   ├── short-term.ts    # 短期メモリ
-│   │   └── long-term.ts     # 長期メモリ
-│   ├── hooks/
-│   │   ├── useAgent.ts      # エージェントフック
-│   │   ├── useMemory.ts     # メモリフック
-│   │   └── useTools.ts      # ツールフック
-│   ├── integrations/
-│   │   ├── nextjs-app/      # Next.js App Router向け
-│   │   └── nextjs-pages/    # Next.js Pages Router向け
-│   └── index.ts             # メインエントリーポイント
+│   │   ├── types.ts            # 共通の型定義
+│   │   ├── utils.ts            # ユーティリティ関数
+│   │   └── model-wrapper.ts    # モデルアクセスラッパー
+│   ├── react/
+│   │   ├── hooks.ts            # Reactフック
+│   │   └── index.ts            # Reactコンポーネントエクスポート
+│   ├── nextjs/
+│   │   ├── route-handler.ts    # Next.js App Router用ヘルパー
+│   │   ├── api-route.ts        # Next.js Pages Router用ヘルパー
+│   │   └── index.ts            # Next.jsヘルパーエクスポート
+│   └── index.ts                # メインエントリーポイント
 ├── examples/
-│   ├── next-app/            # Next.js App Router例
-│   ├── next-pages/          # Next.js Pages Router例
-│   └── cli/                 # CLI/スクリプト例
-├── tests/                   # テストファイル
+│   ├── next-app/               # App Router使用例
+│   └── next-pages/             # Pages Router使用例
+├── tests/
+│   └── patterns/               # 各パターンのテスト
 ├── package.json
-└── tsconfig.json
+├── tsconfig.json
+├── tsup.config.ts
+├── .eslintrc.js
+├── .prettierrc
+└── README.md
 ```
 
-## 3. 主要コンポーネントの実装
+## 3. コア機能の実装
 
-### 3.1 基本的なモデルラッパー
-
-```typescript
-// src/core/models.ts
-import { AIModel, ModelType } from "./types";
-
-export function createModel(type: ModelType, config?: any): AIModel {
-  // モデルの種類に基づいて適切なプロバイダを返す
-  switch (type) {
-    case "openai":
-      return {
-        type,
-        provider: "openai",
-        config,
-      };
-    case "anthropic":
-      return {
-        type,
-        provider: "anthropic",
-        config,
-      };
-    // 他のモデルプロバイダを追加
-    default:
-      throw new Error(`Unsupported model type: ${type}`);
-  }
-}
-
-// 簡単にモデルを切り替えるためのヘルパー関数
-export const openai = (model: string, config?: any) =>
-  createModel("openai", { model, ...config });
-export const anthropic = (model: string, config?: any) =>
-  createModel("anthropic", { model, ...config });
-```
-
-### 3.2 基本エージェントクラス（generateText 中心）
+### モデルラッパーの実装 (src/core/model-wrapper.ts)
 
 ```typescript
-// src/agents/base.ts
 import { generateText } from "ai";
-import { AIModel, AgentConfig, Tool } from "../core/types";
+import { OpenAIClient } from "@ai-sdk/openai";
+import type { PromptTemplate } from "../types";
 
-export abstract class BaseAgent {
-  protected model: AIModel;
-  protected tools: Tool[];
-  protected memory: any;
+export type ModelProvider = "openai" | "anthropic" | "google" | "ollama";
 
-  constructor(config: AgentConfig) {
-    this.model = config.model;
-    this.tools = config.tools || [];
-    this.memory = config.memory;
-  }
-
-  // generateTextを使用してテキスト生成
-  protected async generateResponse(prompt: string, options?: any) {
-    return generateText({
-      model: this.model,
-      prompt,
-      tools: this.tools.reduce((acc, tool) => {
-        acc[tool.name] = tool.definition;
-        return acc;
-      }, {}),
-      ...options,
-    });
-  }
-
-  // 外部から呼び出すメソッド
-  abstract execute(input: string, context?: any): Promise<any>;
-
-  // APIエンドポイントを取得（Next.js統合用）
-  abstract getEndpoint(): string;
+export interface ModelOptions {
+  provider?: ModelProvider;
+  model?: string;
+  temperature?: number;
+  maxTokens?: number;
 }
-```
 
-### 3.3 ワークフローエージェント
+const defaultOptions: ModelOptions = {
+  provider: "openai",
+  model: "gpt-3.5-turbo",
+  temperature: 0.7,
+  maxTokens: 1000,
+};
 
-```typescript
-// src/agents/workflow.ts
-import { BaseAgent } from "./base";
-import { WorkflowConfig, WorkflowStep } from "../core/types";
+export class ModelWrapper {
+  private options: ModelOptions;
 
-export class WorkflowAgent extends BaseAgent {
-  private steps: WorkflowStep[];
-
-  constructor(config: WorkflowConfig) {
-    super(config);
-    this.steps = config.steps || [];
+  constructor(options: ModelOptions = {}) {
+    this.options = { ...defaultOptions, ...options };
   }
 
-  async execute(input: string, context?: any) {
-    let result = input;
-    let currentContext = context || {};
+  async generate(prompt: string | PromptTemplate): Promise<string> {
+    const client = this.getClient();
 
-    // 設定された各ステップを順番に実行
-    for (const step of this.steps) {
-      const stepResult = await this.generateResponse(
-        step.getPrompt(result, currentContext),
-        step.options
-      );
+    // プロンプトの処理
+    const processedPrompt =
+      typeof prompt === "string" ? prompt : this.processPromptTemplate(prompt);
 
-      result = stepResult.text;
-      currentContext = {
-        ...currentContext,
-        [step.id]: result,
-      };
-
-      // ゲート条件があれば評価
-      if (step.gate && !(await step.gate(result, currentContext))) {
-        break;
-      }
-    }
+    const result = await generateText(
+      {
+        model: this.options.model!,
+        prompt: processedPrompt,
+        temperature: this.options.temperature,
+        maxTokens: this.options.maxTokens,
+      },
+      { client }
+    );
 
     return result;
   }
 
-  getEndpoint() {
-    return "/api/agent/workflow";
+  private getClient() {
+    // ここでプロバイダーに応じたクライアントを返す
+    // 現在はOpenAIのみ対応
+    return OpenAIClient();
+  }
+
+  private processPromptTemplate(template: PromptTemplate): string {
+    // テンプレートを文字列に変換するロジック
+    // 例: { system: '...', user: '...' } → 適切な形式に変換
+    // 実装はプロバイダーによって異なる場合がある
+    return template.toString();
   }
 }
 ```
 
-### 3.4 自律エージェント
+### 共通の型定義 (src/core/types.ts)
 
 ```typescript
-// src/agents/autonomous.ts
-import { BaseAgent } from "./base";
-import { AutonomousConfig } from "../core/types";
+export type PromptTemplate = {
+  system?: string;
+  user: string;
+  toString(): string;
+};
 
-export class AutonomousAgent extends BaseAgent {
-  private systemPrompt: string;
-  private maxIterations: number;
+export type Task = {
+  id: string;
+  input: string | Record<string, any>;
+  execute: () => Promise<TaskResult>;
+};
 
-  constructor(config: AutonomousConfig) {
-    super(config);
-    this.systemPrompt = config.systemPrompt || "";
-    this.maxIterations = config.maxIterations || 5;
+export type TaskResult = {
+  output: string | Record<string, any>;
+  metadata?: Record<string, any>;
+};
+
+export type RouteHandler = {
+  condition: (
+    input: string | Record<string, any>
+  ) => boolean | Promise<boolean>;
+  handler: (input: string | Record<string, any>) => Promise<TaskResult>;
+};
+
+export type EvaluationResult = {
+  score: number;
+  feedback: string;
+  needsImprovement: boolean;
+};
+```
+
+## 4. ワークフローパターンの実装
+
+### 1. プロンプトチェーン (src/patterns/prompt-chain.ts)
+
+```typescript
+import { ModelWrapper, ModelOptions } from "../core/model-wrapper";
+import type { TaskResult } from "../core/types";
+
+export interface ChainStep {
+  name: string;
+  prompt: (input: any, prevResults?: Record<string, any>) => string;
+  outputProcessor?: (output: string) => any;
+}
+
+export class PromptChain {
+  private steps: ChainStep[] = [];
+  private modelWrapper: ModelWrapper;
+  private results: Record<string, any> = {};
+
+  constructor(options: ModelOptions = {}) {
+    this.modelWrapper = new ModelWrapper(options);
   }
 
-  async execute(input: string, context?: any) {
-    // コンテキストの初期化
-    let currentContext = context || {};
+  addStep(step: ChainStep): PromptChain {
+    this.steps.push(step);
+    return this;
+  }
+
+  async execute(initialInput: any): Promise<TaskResult> {
+    let currentInput = initialInput;
+
+    for (const step of this.steps) {
+      const prompt = step.prompt(currentInput, this.results);
+      const output = await this.modelWrapper.generate(prompt);
+
+      const processedOutput = step.outputProcessor
+        ? step.outputProcessor(output)
+        : output;
+
+      this.results[step.name] = processedOutput;
+      currentInput = processedOutput;
+    }
+
+    return {
+      output: currentInput,
+      metadata: { steps: Object.keys(this.results), results: this.results },
+    };
+  }
+}
+```
+
+### 2. ルーティング (src/patterns/routing.ts)
+
+```typescript
+import { ModelWrapper, ModelOptions } from "../core/model-wrapper";
+import type { RouteHandler, TaskResult } from "../core/types";
+
+export class Router {
+  private routes: RouteHandler[] = [];
+  private fallbackHandler?: (input: any) => Promise<TaskResult>;
+  private modelWrapper: ModelWrapper;
+
+  constructor(options: ModelOptions = {}) {
+    this.modelWrapper = new ModelWrapper(options);
+  }
+
+  addRoute(route: RouteHandler): Router {
+    this.routes.push(route);
+    return this;
+  }
+
+  setFallback(handler: (input: any) => Promise<TaskResult>): Router {
+    this.fallbackHandler = handler;
+    return this;
+  }
+
+  async classifyAndRoute(input: any): Promise<TaskResult> {
+    // 各ルートの条件をチェック
+    for (const route of this.routes) {
+      const matches = await route.condition(input);
+      if (matches) {
+        return route.handler(input);
+      }
+    }
+
+    // フォールバックハンドラーがあれば実行
+    if (this.fallbackHandler) {
+      return this.fallbackHandler(input);
+    }
+
+    throw new Error("No matching route found and no fallback handler defined");
+  }
+
+  // LLMを使用して入力を分類し、適切なルートを選択するヘルパーメソッド
+  async classifyWithLLM(input: any, routeNames: string[]): Promise<string> {
+    const prompt = `以下の入力を分類し、最も適切なカテゴリを選んでください。カテゴリ名のみを返してください。
+カテゴリ: ${routeNames.join(", ")}
+
+入力: ${JSON.stringify(input)}`;
+
+    const result = await this.modelWrapper.generate(prompt);
+    return result.trim();
+  }
+}
+```
+
+### 3. 並列化 (src/patterns/parallelization.ts)
+
+```typescript
+import type { Task, TaskResult } from "../core/types";
+
+export type ParallelOptions = {
+  maxConcurrent?: number;
+  timeoutMs?: number;
+};
+
+export class Parallelizer {
+  private tasks: Task[] = [];
+  private options: ParallelOptions;
+
+  constructor(options: ParallelOptions = {}) {
+    this.options = {
+      maxConcurrent: 5,
+      timeoutMs: 30000,
+      ...options,
+    };
+  }
+
+  addTask(task: Task): Parallelizer {
+    this.tasks.push(task);
+    return this;
+  }
+
+  async executeAll(): Promise<TaskResult[]> {
+    const { maxConcurrent, timeoutMs } = this.options;
+
+    // 同時実行数を制限する場合の処理
+    if (maxConcurrent && maxConcurrent < this.tasks.length) {
+      return this.executeWithConcurrencyLimit();
+    }
+
+    // タイムアウト付きで全タスクを並列実行
+    const taskPromises = this.tasks.map((task) => {
+      const timeoutPromise = new Promise<TaskResult>((_, reject) => {
+        setTimeout(
+          () => reject(new Error(`Task ${task.id} timed out`)),
+          timeoutMs
+        );
+      });
+
+      return Promise.race([task.execute(), timeoutPromise]);
+    });
+
+    return Promise.all(taskPromises);
+  }
+
+  async executeWithConcurrencyLimit(): Promise<TaskResult[]> {
+    const { maxConcurrent = 5 } = this.options;
+    const results: TaskResult[] = [];
+    const taskQueue = [...this.tasks];
+
+    while (taskQueue.length > 0) {
+      const batch = taskQueue.splice(0, maxConcurrent);
+      const batchResults = await Promise.all(
+        batch.map((task) => task.execute())
+      );
+      results.push(...batchResults);
+    }
+
+    return results;
+  }
+
+  // 結果を集約するヘルパーメソッド
+  static aggregateResults(results: TaskResult[]): TaskResult {
+    // 結果の集約ロジック (実装例)
+    return {
+      output: results.map((r) => r.output),
+      metadata: {
+        count: results.length,
+        individualResults: results,
+      },
+    };
+  }
+}
+```
+
+### 4. オーケストレーター-ワーカー (src/patterns/orchestrator.ts)
+
+```typescript
+import { ModelWrapper, ModelOptions } from "../core/model-wrapper";
+import type { Task, TaskResult } from "../core/types";
+
+export type WorkerDefinition = {
+  id: string;
+  description: string;
+  createTask: (input: any) => Task;
+};
+
+export class Orchestrator {
+  private workers: Record<string, WorkerDefinition> = {};
+  private modelWrapper: ModelWrapper;
+
+  constructor(options: ModelOptions = {}) {
+    this.modelWrapper = new ModelWrapper(options);
+  }
+
+  registerWorker(worker: WorkerDefinition): Orchestrator {
+    this.workers[worker.id] = worker;
+    return this;
+  }
+
+  async orchestrate(input: any): Promise<TaskResult> {
+    // 1. オーケストレーターがどのワーカーを使うか決定
+    const workersToUse = await this.decideWorkers(input);
+
+    // 2. 選択されたワーカーでタスクを作成して実行
+    const tasks = workersToUse.map((workerId) => {
+      const worker = this.workers[workerId];
+      if (!worker) {
+        throw new Error(`Worker ${workerId} not found`);
+      }
+      return worker.createTask(input);
+    });
+
+    // 3. すべてのタスクを実行
+    const results = await Promise.all(tasks.map((task) => task.execute()));
+
+    // 4. 結果を集約
+    return this.combineResults(results, input);
+  }
+
+  private async decideWorkers(input: any): Promise<string[]> {
+    const workerDescriptions = Object.values(this.workers)
+      .map((w) => `${w.id}: ${w.description}`)
+      .join("\n");
+
+    const prompt = `以下のワーカーの中から、この入力に対して最も適切なワーカーIDを選んでください。複数必要な場合はカンマ区切りで返してください。
+利用可能なワーカー:
+${workerDescriptions}
+
+入力:
+${JSON.stringify(input)}
+
+選択するワーカーID:`;
+
+    const result = await this.modelWrapper.generate(prompt);
+    return result.split(",").map((id) => id.trim());
+  }
+
+  private async combineResults(
+    results: TaskResult[],
+    originalInput: any
+  ): Promise<TaskResult> {
+    // 単純な結果の場合はそのまま返す
+    if (results.length === 1) {
+      return results[0];
+    }
+
+    // 複数の結果を組み合わせるロジック
+    const prompt = `以下の複数の結果を組み合わせて、最終的な回答を生成してください:
+${results.map((r, i) => `結果${i + 1}: ${JSON.stringify(r.output)}`).join("\n")}
+
+元の入力: ${JSON.stringify(originalInput)}
+
+最終回答:`;
+
+    const combinedOutput = await this.modelWrapper.generate(prompt);
+
+    return {
+      output: combinedOutput,
+      metadata: {
+        individualResults: results,
+      },
+    };
+  }
+}
+```
+
+### 5. 評価者-最適化 (src/patterns/evaluator.ts)
+
+```typescript
+import { ModelWrapper, ModelOptions } from "../core/model-wrapper";
+import type { EvaluationResult, TaskResult } from "../core/types";
+
+export type GeneratorFunction = (
+  input: any,
+  feedback?: string
+) => Promise<string>;
+
+export class EvaluatorOptimizer {
+  private modelWrapper: ModelWrapper;
+  private maxIterations: number;
+  private evaluationPrompt: string;
+
+  constructor(options: ModelOptions = {}, maxIterations = 3) {
+    this.modelWrapper = new ModelWrapper(options);
+    this.maxIterations = maxIterations;
+    this.evaluationPrompt = `以下の出力を評価し、1-10のスコア（10が最高）、フィードバック、改善が必要かどうか（true/false）を返してください。JSONフォーマットで返してください。
+{
+  "score": 数値,
+  "feedback": "フィードバックのテキスト",
+  "needsImprovement": ブール値
+}`;
+  }
+
+  async generateAndOptimize(
+    input: any,
+    generatorFn: GeneratorFunction
+  ): Promise<TaskResult> {
+    let currentOutput = await generatorFn(input);
     let iterations = 0;
-    let lastResult = "";
+    let allEvaluations: EvaluationResult[] = [];
 
     while (iterations < this.maxIterations) {
-      // メモリから過去の対話を取得
-      const history = this.memory ? await this.memory.getHistory() : [];
+      // 出力を評価
+      const evaluation = await this.evaluate(input, currentOutput);
+      allEvaluations.push(evaluation);
 
-      // エージェントの思考と計画
-      const planResult = await this.generateResponse(
-        `${
-          this.systemPrompt
-        }\n\nCurrent task: ${input}\n\nCurrent context: ${JSON.stringify(
-          currentContext
-        )}\n\nPrevious interactions: ${JSON.stringify(
-          history
-        )}\n\nPlease plan your next actions.`,
-        { temperature: 0.7 }
-      );
-
-      // 次のアクションを実行
-      const actionResult = await this.generateResponse(
-        `${planResult.text}\n\nBased on this plan, execute the next action and provide your response.`,
-        { tools: this.tools }
-      );
-
-      // 結果を記録
-      lastResult = actionResult.text;
-
-      // ツール呼び出しがあれば処理
-      if (
-        actionResult.toolInvocations &&
-        actionResult.toolInvocations.length > 0
-      ) {
-        currentContext = {
-          ...currentContext,
-          toolResults: actionResult.toolInvocations,
-        };
-      } else {
-        // ツール呼び出しがなければ終了
+      // 改善が必要なければ終了
+      if (!evaluation.needsImprovement) {
         break;
       }
 
+      // フィードバックを元に出力を改善
+      currentOutput = await generatorFn(input, evaluation.feedback);
       iterations++;
     }
 
-    // メモリに記録
-    if (this.memory) {
-      await this.memory.saveInteraction(input, lastResult);
-    }
-
-    return lastResult;
+    return {
+      output: currentOutput,
+      metadata: {
+        iterations,
+        evaluations: allEvaluations,
+      },
+    };
   }
 
-  getEndpoint() {
-    return "/api/agent/autonomous";
+  private async evaluate(
+    input: any,
+    output: string
+  ): Promise<EvaluationResult> {
+    const prompt = `${this.evaluationPrompt}
+
+入力: ${JSON.stringify(input)}
+出力: ${output}
+
+評価:`;
+
+    const evaluationStr = await this.modelWrapper.generate(prompt);
+
+    try {
+      return JSON.parse(evaluationStr) as EvaluationResult;
+    } catch (e) {
+      // JSON解析に失敗した場合のフォールバック
+      console.warn("Failed to parse evaluation result:", evaluationStr);
+      return {
+        score: 5,
+        feedback:
+          "評価結果のパースに失敗しました。出力形式を改善してください。",
+        needsImprovement: true,
+      };
+    }
+  }
+
+  setEvaluationPrompt(prompt: string): EvaluatorOptimizer {
+    this.evaluationPrompt = prompt;
+    return this;
   }
 }
 ```
 
-### 3.5 React フック
+## 5. Next.js との統合
+
+### App Router での使用 (src/nextjs/route-handler.ts)
 
 ```typescript
-// src/hooks/useAgent.ts
+import { NextResponse } from "next/server";
+import type { NextRequest } from "next/server";
+import { PromptChain } from "../patterns/prompt-chain";
+import { Router } from "../patterns/routing";
+import { Parallelizer } from "../patterns/parallelization";
+import { Orchestrator } from "../patterns/orchestrator";
+import { EvaluatorOptimizer } from "../patterns/evaluator";
+
+// プロンプトチェーン用ルートハンドラー
+export function createChainHandler(chain: PromptChain) {
+  return async function handler(req: NextRequest) {
+    const body = await req.json();
+    const { input } = body;
+
+    try {
+      const result = await chain.execute(input);
+      return NextResponse.json(result);
+    } catch (error) {
+      console.error("Error in chain handler:", error);
+      return NextResponse.json(
+        { error: "Failed to process chain" },
+        { status: 500 }
+      );
+    }
+  };
+}
+
+// ルーター用ハンドラー
+export function createRouterHandler(router: Router) {
+  return async function handler(req: NextRequest) {
+    const body = await req.json();
+
+    try {
+      const result = await router.classifyAndRoute(body);
+      return NextResponse.json(result);
+    } catch (error) {
+      console.error("Error in router handler:", error);
+      return NextResponse.json(
+        { error: "Failed to route request" },
+        { status: 500 }
+      );
+    }
+  };
+}
+
+// 他のパターン用のハンドラーも同様に実装
+```
+
+### Pages API での使用 (src/nextjs/api-route.ts)
+
+```typescript
+import type { NextApiRequest, NextApiResponse } from "next";
+import { PromptChain } from "../patterns/prompt-chain";
+import { Router } from "../patterns/routing";
+
+// プロンプトチェーン用APIハンドラー
+export function createChainApiHandler(chain: PromptChain) {
+  return async function handler(req: NextApiRequest, res: NextApiResponse) {
+    if (req.method !== "POST") {
+      return res.status(405).json({ error: "Method not allowed" });
+    }
+
+    const { input } = req.body;
+
+    try {
+      const result = await chain.execute(input);
+      return res.status(200).json(result);
+    } catch (error) {
+      console.error("Error in chain API handler:", error);
+      return res.status(500).json({ error: "Failed to process chain" });
+    }
+  };
+}
+
+// ルーター用APIハンドラー
+export function createRouterApiHandler(router: Router) {
+  return async function handler(req: NextApiRequest, res: NextApiResponse) {
+    if (req.method !== "POST") {
+      return res.status(405).json({ error: "Method not allowed" });
+    }
+
+    try {
+      const result = await router.classifyAndRoute(req.body);
+      return res.status(200).json(result);
+    } catch (error) {
+      console.error("Error in router API handler:", error);
+      return res.status(500).json({ error: "Failed to route request" });
+    }
+  };
+}
+
+// 他のパターン用のAPIハンドラーも同様に実装
+```
+
+## 6. React フックの実装 (src/react/hooks.ts)
+
+```typescript
 import { useState, useCallback } from "react";
-import type { BaseAgent } from "../agents/base";
+import { PromptChain } from "../patterns/prompt-chain";
+import { Router } from "../patterns/routing";
+import { Parallelizer } from "../patterns/parallelization";
+import { Orchestrator } from "../patterns/orchestrator";
+import { EvaluatorOptimizer } from "../patterns/evaluator";
+import type { TaskResult } from "../core/types";
 
-export function useAgent(agent: BaseAgent, config?: any) {
-  const [messages, setMessages] = useState([]);
+// プロンプトチェーン用フック
+export function usePromptChain(chain: PromptChain) {
+  const [result, setResult] = useState<TaskResult | null>(null);
   const [isLoading, setIsLoading] = useState(false);
-  const [error, setError] = useState(null);
+  const [error, setError] = useState<Error | null>(null);
 
-  const sendMessage = useCallback(
-    async (message) => {
+  const execute = useCallback(
+    async (input: any) => {
       setIsLoading(true);
       setError(null);
 
       try {
-        // 新しいメッセージを追加
-        const userMessage = { role: "user", content: message };
-        setMessages((prev) => [...prev, userMessage]);
-
-        // エージェントからの応答を取得
-        const response = await agent.execute(message, {
-          messages: [...messages, userMessage],
-        });
-
-        // 応答を追加
-        const assistantMessage = { role: "assistant", content: response };
-        setMessages((prev) => [...prev, assistantMessage]);
-
-        return assistantMessage;
+        const chainResult = await chain.execute(input);
+        setResult(chainResult);
+        return chainResult;
       } catch (err) {
-        setError(err);
-        return null;
+        const error = err instanceof Error ? err : new Error(String(err));
+        setError(error);
+        throw error;
       } finally {
         setIsLoading(false);
       }
     },
-    [agent, messages]
+    [chain]
   );
 
-  // Reactの状態をクリア
-  const reset = useCallback(() => {
-    setMessages([]);
-    setError(null);
-  }, []);
-
-  return {
-    messages,
-    isLoading,
-    error,
-    sendMessage,
-    reset,
-  };
+  return { execute, result, isLoading, error };
 }
+
+// ルーター用フック
+export function useRouter(router: Router) {
+  const [result, setResult] = useState<TaskResult | null>(null);
+  const [isLoading, setIsLoading] = useState(false);
+  const [error, setError] = useState<Error | null>(null);
+
+  const route = useCallback(
+    async (input: any) => {
+      setIsLoading(true);
+      setError(null);
+
+      try {
+        const routeResult = await router.classifyAndRoute(input);
+        setResult(routeResult);
+        return routeResult;
+      } catch (err) {
+        const error = err instanceof Error ? err : new Error(String(err));
+        setError(error);
+        throw error;
+      } finally {
+        setIsLoading(false);
+      }
+    },
+    [router]
+  );
+
+  return { route, result, isLoading, error };
+}
+
+// 他のパターン用のフックも同様に実装
 ```
 
-## 4. Next.js 統合
+## 7. 使用例: プロンプトチェーンの実装
 
-### 4.1 App Router の例（Route Handler）
-
-```typescript
-// src/integrations/nextjs-app/route-handler.ts
-import { NextRequest, NextResponse } from "next/server";
-import { openai } from "@ai-sdk/openai";
-import { generateText } from "ai";
-import { WorkflowAgent } from "../../agents/workflow";
-
-// ワークフローエージェントの設定
-const workflowAgent = new WorkflowAgent({
-  model: openai("gpt-4o"),
-  steps: [
-    // ステップ定義
-  ],
-  tools: [
-    // ツール定義
-  ],
-});
-
-// Route Handlerの定義（Next.js 13.2+）
-export async function POST(req: NextRequest) {
-  try {
-    const { messages } = await req.json();
-    const prompt = messages[messages.length - 1].content;
-
-    // エージェントを実行
-    const result = await workflowAgent.execute(prompt, { messages });
-
-    // JSONレスポンス
-    return NextResponse.json({ result });
-  } catch (error) {
-    return NextResponse.json({ error: error.message }, { status: 500 });
-  }
-}
-```
-
-### 4.2 Pages Router の例（API Route）
+### App Router 使用例 (examples/next-app/app/api/chain/route.ts)
 
 ```typescript
-// src/integrations/nextjs-pages/api-route.ts
-import type { NextApiRequest, NextApiResponse } from "next";
-import { openai } from "@ai-sdk/openai";
-import { AutonomousAgent } from "../../agents/autonomous";
+import { NextResponse } from "next/server";
+import { createChainHandler } from "ai-agent-kit/nextjs";
+import { PromptChain } from "ai-agent-kit/patterns";
+import { ModelWrapper } from "ai-agent-kit/core";
 
-// 自律エージェントの設定
-const autonomousAgent = new AutonomousAgent({
-  model: openai("gpt-4o"),
-  systemPrompt: "...",
-  tools: [
-    // ツール定義
-  ],
-});
-
-export default async function handler(
-  req: NextApiRequest,
-  res: NextApiResponse
-) {
-  if (req.method !== "POST") {
-    return res.status(405).json({ error: "Method not allowed" });
-  }
-
-  try {
-    const { messages } = req.body;
-    const prompt = messages[messages.length - 1].content;
-
-    // エージェントを実行
-    const result = await autonomousAgent.execute(prompt, { messages });
-
-    // JSONレスポンス
-    return res.status(200).json({ result });
-  } catch (error) {
-    return res.status(500).json({ error: error.message });
-  }
-}
-```
-
-### 4.3 Server Components との統合例
-
-```typescript
-// src/integrations/nextjs-app/server-component.tsx
-import { openai } from "@ai-sdk/openai";
-import { WorkflowAgent } from "../../agents/workflow";
-
-// パラメータを受け取るサーバーコンポーネント
-export default async function AgentComponent({ query }: { query: string }) {
-  // サーバーコンポーネント内でエージェントを初期化
-  const agent = new WorkflowAgent({
-    model: openai("gpt-4o"),
-    steps: [
-      // ステップ定義
-    ],
+// プロンプトチェーンの設定
+const summarizeAndTranslateChain = new PromptChain()
+  .addStep({
+    name: "summarize",
+    prompt: (input) => `次のテキストの要約を作成してください：\n\n${input}`,
+    outputProcessor: (output) => output.trim(),
+  })
+  .addStep({
+    name: "translate",
+    prompt: (input, prevResults) =>
+      `次の要約を日本語に翻訳してください：\n\n${
+        prevResults?.summarize || input
+      }`,
+    outputProcessor: (output) => output.trim(),
   });
 
-  // サーバーサイドでエージェントを実行
-  const result = await agent.execute(query);
+// ルートハンドラーの作成とエクスポート
+export const POST = createChainHandler(summarizeAndTranslateChain);
+```
+
+### React コンポーネント使用例 (examples/next-app/app/components/ChainExample.tsx)
+
+```tsx
+"use client";
+
+import { useState } from "react";
+import { usePromptChain } from "ai-agent-kit/react";
+import { PromptChain } from "ai-agent-kit/patterns";
+
+// プロンプトチェーンの設定
+const summarizeChain = new PromptChain().addStep({
+  name: "summarize",
+  prompt: (input) => `次のテキストの要約を作成してください：\n\n${input}`,
+});
+
+export default function ChainExample() {
+  const [input, setInput] = useState("");
+  const { execute, result, isLoading, error } = usePromptChain(summarizeChain);
+
+  const handleSubmit = async (e: React.FormEvent) => {
+    e.preventDefault();
+    await execute(input);
+  };
 
   return (
-    <div>
-      <h2>エージェント応答</h2>
-      <div className="response">{result}</div>
+    <div className="p-4 max-w-2xl mx-auto">
+      <h2 className="text-xl font-bold mb-4">プロンプトチェーン例</h2>
+
+      <form onSubmit={handleSubmit} className="mb-4">
+        <textarea
+          className="w-full p-2 border rounded mb-2"
+          value={input}
+          onChange={(e) => setInput(e.target.value)}
+          rows={4}
+          placeholder="要約するテキストを入力してください"
+        />
+        <button
+          type="submit"
+          disabled={isLoading}
+          className="px-4 py-2 bg-blue-500 text-white rounded disabled:bg-blue-300"
+        >
+          {isLoading ? "処理中..." : "要約する"}
+        </button>
+      </form>
+
+      {error && (
+        <div className="p-2 bg-red-100 text-red-700 rounded mb-4">
+          エラー: {error.message}
+        </div>
+      )}
+
+      {result && (
+        <div className="p-4 bg-gray-100 rounded">
+          <h3 className="font-bold mb-2">結果:</h3>
+          <p>{result.output}</p>
+        </div>
+      )}
     </div>
   );
 }
 ```
 
-## 5. パッケージ設定
+## 8. パッケージの公開
 
-### 5.1 package.json の設定
-
-```json
-{
-  "name": "ai-agent-kit",
-  "version": "0.1.0",
-  "description": "Next.js向けAIエージェントフレームワーク",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "files": ["dist"],
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "lint": "eslint src/**/*.ts",
-    "prepublishOnly": "pnpm run build"
-  },
-  "peerDependencies": {
-    "ai": "^4.0.0",
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "@ai-sdk/react": "^4.0.0",
-    "@ai-sdk/openai": "^4.0.0",
-    "next": ">=13.0.0"
-  },
-  "dependencies": {
-    "zod": "^3.22.0"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "tsup": "^7.0.0",
-    "vitest": "^0.34.0",
-    "eslint": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0"
-  },
-  "keywords": ["ai", "agent", "nextjs", "openai", "llm"]
-}
-```
-
-### 5.2 tsup.config.ts の設定
-
-```typescript
-import { defineConfig } from "tsup";
-
-export default defineConfig({
-  entry: [
-    "src/index.ts",
-    "src/integrations/nextjs-app/index.ts",
-    "src/integrations/nextjs-pages/index.ts",
-  ],
-  format: ["cjs", "esm"],
-  dts: true,
-  splitting: false,
-  sourcemap: true,
-  clean: true,
-  treeshake: true,
-  external: [
-    "react",
-    "react-dom",
-    "next",
-    "ai",
-    "@ai-sdk/react",
-    "@ai-sdk/openai",
-  ],
-});
-```
-
-## 6. CLI/スクリプト的な使用例
-
-```typescript
-// examples/cli/simple-agent.ts
-import { openai } from "@ai-sdk/openai";
-import { AutonomousAgent } from "../../src/agents/autonomous";
-import { MemoryManager } from "../../src/memory/base";
-
-// 環境変数から設定を読み込み
-const OPENAI_API_KEY = process.env.OPENAI_API_KEY;
-if (!OPENAI_API_KEY) {
-  console.error("OPENAI_API_KEY environment variable is required");
-  process.exit(1);
-}
-
-// メモリマネージャ（JSONファイルベース）の実装
-const fileMemory = new MemoryManager({
-  filePath: "./agent-memory.json",
-});
-
-// エージェントの初期化
-const agent = new AutonomousAgent({
-  model: openai("gpt-4o", { apiKey: OPENAI_API_KEY }),
-  systemPrompt: "You are a helpful assistant.",
-  memory: fileMemory,
-  maxIterations: 3,
-});
-
-// コマンドライン引数から入力を取得
-const input = process.argv.slice(2).join(" ");
-if (!input) {
-  console.error("Please provide an input");
-  process.exit(1);
-}
-
-// エージェントを実行
-async function run() {
-  console.log(`Input: ${input}`);
-  console.log("Processing...");
-
-  try {
-    const result = await agent.execute(input);
-    console.log("\nResult:");
-    console.log(result);
-  } catch (error) {
-    console.error("Error:", error.message);
-  }
-}
-
-run();
-```
-
-## 7. パッケージの公開手順
-
-1. パッケージのビルド
+### ビルドとテスト
 
 ```bash
+# ビルド
 pnpm build
+
+# リンター実行
+pnpm lint
+
+# テスト実行（テストを追加した場合）
+# pnpm test
 ```
 
-2. npm への公開準備
+### Changesets によるリリース準備
 
 ```bash
-# パッケージ内容の確認
-npm pack --dry-run
-
-# npmにログイン
-npm login
-```
-
-3. パッケージの公開
-
-```bash
-npm publish --access public
-```
-
-## 8. 自動化されたリリースワークフロー
-
-### 8.1 Changesets 導入
-
-```bash
-# changetsetsのインストール
-pnpm add -D @changesets/cli
-
-# 初期化
-pnpm changeset init
-```
-
-### 8.2 リリースワークフロー
-
-```bash
-# 変更内容の記録
+# 変更セットの作成
 pnpm changeset
 
 # バージョン更新
 pnpm changeset version
 
-# リリースビルドとパブリッシュ
-pnpm changeset publish
+# リリース（npmへの公開）
+pnpm release
 ```
 
-### 8.3 GitHub Actions による自動化（.github/workflows/release.yml）
+## 9. 開発ロードマップ
 
-```yaml
-name: Release
+### フェーズ 1: 基本機能
 
-on:
-  push:
-    branches:
-      - main
+- [x] 5 つの基本ワークフローパターンの実装
+- [x] Next.js App Router / Pages Router の両方との統合
+- [x] React フックの実装
+- [x] 基本的なドキュメント作成
 
-jobs:
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+### フェーズ 2: 拡張機能
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: "pnpm"
+- [ ] モデルプロバイダーの拡張（Anthropic, Google, Ollama）
+- [ ] シンプルなツール統合 API
+- [ ] ストリーミングサポートの強化
+- [ ] ステート永続化オプション
 
-      - name: Install dependencies
-        run: pnpm install
+### フェーズ 3: 高度な機能
 
-      - name: Build
-        run: pnpm build
-
-      - name: Test
-        run: pnpm test
-
-      - name: Create Release Pull Request or Publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm changeset publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-```
-
-## 9. 今後の開発計画
-
-### Phase 1 (v0.1.0)
-
-- [x] 基本的なエージェントフレームワークの実装
-- [x] モデル切り替え機能
-- [x] generateText 中心の API
-- [x] 基本的なツール実装
-- [x] Next.js 統合サンプル
-
-### Phase 2 (v0.2.0)
-
-- [ ] メモリシステムの実装
-- [ ] より多くのツールの追加
-- [ ] Server Components 対応強化
-- [ ] エラーハンドリングの強化
-
-### Phase 3 (v1.0.0)
-
+- [ ] よく使われるエージェントテンプレートの追加
 - [ ] パフォーマンス最適化
-- [ ] UI/UX コンポーネント
-- [ ] 完全なドキュメント整備
-- [ ] テストカバレッジの向上
+- [ ] 包括的なテストの追加
+- [ ] 高度なデバッグ機能
 
-## 10. 注意点と考慮事項
+## 10. 重要な考慮事項
 
-1. **シンプルさの維持**
+### シンプルさの維持
 
-   - 必要最小限の機能から始める
-   - 段階的に機能を追加
-   - フレームワークに依存しないコア機能
+- 各パターンは独立して使用できるようにする
+- 不必要な抽象化を避け、使いやすさを優先する
+- 名前と動作を直感的にする
 
-2. **モデル切り替えの柔軟性**
+### TypeScript サポート
 
-   - プロバイダに依存しないインターフェース
-   - 設定の分離と抽象化
-   - 必要に応じたアダプターパターンの採用
+- すべての関数とクラスに適切な型を定義する
+- ジェネリクスを活用して柔軟性を高める
+- エディタの補完が効くように設計する
 
-3. **TypeScript 対応**
+### エラーハンドリング
 
-   - 型定義の充実
-   - 開発者体験の向上
-   - モデルの型安全性の確保
+- ユーザーフレンドリーなエラーメッセージを提供する
+- デバッグしやすいエラートレースを実装する
+- エラー回復メカニズムを用意する
 
-4. **エラーハンドリング**
+### ドキュメント
 
-   - わかりやすいエラーメッセージ
-   - リカバリー方法の提示
-   - エッジケースの対応
+- 各パターンの使用例を豊富に提供する
+- 使い方のチュートリアルを作成する
+- TypeDoc を使用した API ドキュメントを生成する
 
-5. **パフォーマンス考慮事項**
-
-   - generateText の適切な使用
-   - 不必要なネットワークリクエストの最小化
-   - Server Components の活用
-
-6. **ドキュメント**
-   - 基本的な使用方法
-   - 具体的な実装例
-   - トラブルシューティングガイド
-   - モデル切り替えの例
+このツールキットを使用することで、開発者は複雑な AI エージェントのワークフローパターンを簡単に実装でき、ユーザーは様々な AI エージェントを効率的に構築できるようになります。
